styles.css
* {
    font-family: "Roboto";
    padding: 0;
    margin: 0;
}

body {
    background: rgb(5,56,107);
    background: linear-gradient(0deg, rgba(5,56,107,1) 0%, rgba(92,219,149,1) 72%); 
    background-repeat: no-repeat;
}

html, body {
    min-height: 100%;
}

.sketchArea {
    display: grid;
    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
    padding: 0px;
    justify-content: center;
    margin-top: 10px;
}

#title {
    background-color: #05386B;
    text-align: center;
    font-size: 60px;
    color: #EDF5E1;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
    padding: 20px 0px;
    margin-bottom: 60px;
}

.buttonContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    max-width: 500px;
    margin: auto;
    margin-bottom: 50px;
}

.button {
    color: #EDF5E1;
    background-color: #05386B;
    border-radius: 10px;
    border: 1px solid black;
    font-size: 25px;
    margin: 6px;
    padding: 2px;
}

.square {
    width: 1.45em;
    height: 1.45em;
    border: 1px solid black;
    background-color: white;
}

#squaresSelector {
    background-color: #05386B;
    border-radius: 5px;
    max-width: 75px;
}

#color {
    background-color: #05386B;
    border-radius: 5px;
    border: 1px solid #05386B;
}

